update fotter text

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
   <header> </header>
   <main></main>
-  <footer> hello Footer!
-  
-  </footer>
-  
+  <footer> hello Footer!</footer> 
 </body>
 </html>
